<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbLoginBarraProgreso"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:elevation="@dimen/activity_horizontal_margin"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:visibility="invisible"
            android:layout_marginBottom="70dp"
            android:layout_alignParentBottom="true"/>

        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_logo_ghestic_eslogan"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_semicirculo"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llLoginCampos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/login_titulo"
                        android:textColor="@color/blanco"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtSubTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_regular"
                        android:text="@string/login_descripcion"
                        android:textColor="@color/blanco"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etLoginUsuario"
                        android:layout_width="310dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_usuario_bg"
                        android:drawableEnd="@drawable/ic_person"
                        android:fontFamily="@font/muli_regular"
                        android:hint="@string/login_txt_hint_usuario"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textColor="@color/blanco"
                        android:textColorHint="@color/blanco" />

                    <EditText
                        android:id="@+id/etLoginContrasena"
                        android:layout_width="310dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/login_usuario_bg"
                        android:drawableEnd="@drawable/ic_vpn_key"
                        android:fontFamily="@font/muli_regular"
                        android:hint="@string/login_txt_hint_contrasena"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@color/blanco"
                        android:textColorHint="@color/blanco" />

                    <Button
                        style="@style/botonVerde"
                        android:id="@+id/bLoginIngresar"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/login_btn_Acceder"
                        android:onClick="btnLoginIngresar"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>